--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       'Gurgaon',
       'Ahmedabad',
       'New Delhi'
+      'Haveli'
     ];
 
     function showMessage(type, city = '', country = '') {
