--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       'Ahmedabad',
       'New Delhi'
       'Haveli'
+    'Indore'
     ];
 
     function showMessage(type, city = '', country = '') {
